--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -163,7 +163,8 @@
                 tools:layout_editor_absoluteX="54dp"
                 tools:layout_editor_absoluteY="550dp"
                 android:backgroundTint="@color/green"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:onClick="btSalvarOnCick"/>
 
             <Button
                 android:id="@+id/btVoltar"
