--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,7 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     android:orientation="vertical"
+    android:layout_marginLeft="18dp"
+    android:layout_marginRight="18dp"
     tools:context=".Cadastro">
 
     <LinearLayout
@@ -43,29 +47,27 @@
             android:textSize="25dp"
             android:textColor="@color/green"/>
 
+
         <TextView
+            style="@style/BoldHeadlines"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            style="@style/BoldHeadlines"
-            android:layout_marginLeft="35dp"
+            android:layout_gravity="left"
+            android:layout_marginTop="2dp"
             android:text="Nome:"
-            android:textSize="20dp"
-            android:textColor="@color/black"/>
-
+            android:textColor="@color/black"
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/edNome"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Digite aqui..."
             android:textColorHint="@color/black"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
             style="@style/BoldHeadlines"
             android:layout_marginTop="2dp"
             android:text="WhatsApp:"
@@ -74,9 +76,8 @@
 
         <EditText
             android:id="@+id/edWhatsapp"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Digite aqui..."
             android:textColorHint="@color/black"/>
 
@@ -84,7 +85,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/BoldHeadlines"
-            android:layout_marginLeft="35dp"
             android:layout_marginTop="2dp"
             android:text="CPF:"
             android:textSize="20dp"
@@ -92,18 +92,18 @@
 
         <EditText
             android:id="@+id/cpf"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Digite aqui..."
             android:imeActionLabel="usuario"
             android:textColorHint="@color/black"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             style="@style/BoldHeadlines"
-            android:layout_margin="4dp"
+            android:layout_marginTop="4dp"
             android:text="Dados de Login"
             android:textSize="25dp"
             android:textColor="@color/green"/>
@@ -111,17 +111,16 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
             style="@style/BoldHeadlines"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="2dp"
             android:text="Usuário"
             android:textSize="20dp"
             android:textColor="@color/black"/>
 
         <EditText
             android:id="@+id/edUsuario"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:hint="Digite aqui..."
             android:imeActionLabel="usuario"
@@ -130,24 +129,22 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
             style="@style/BoldHeadlines"
-            android:layout_marginTop="13dp"
-            android:text="Usuário"
+            android:layout_marginTop="2dp"
+            android:text="Senha"
             android:textSize="20dp"
             android:textColor="@color/black"/>
 
         <EditText
             android:id="@+id/edSenha"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Digite aqui..."
             android:textColorHint="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
             android:layout_marginBottom="10dp">
