--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:layout_marginLeft="18dp"
     android:layout_marginRight="18dp"
-    tools:context=".Cadastro">
+    tools:context=".activities.CadastroActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
