--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -91,7 +91,7 @@
             android:textColor="@color/black"/>
 
         <EditText
-            android:id="@+id/cpf"
+            android:id="@+id/edCpf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Digite aqui..."
