Implementado funcionalidades Login e Cadastro
Finalizado Sprint 2. Agora, para essa parte inicial, falta as máscaras e validação de CPF.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:src="@drawable/logo" />
 
     <EditText
-        android:id="@+id/edUsername"
+        android:id="@+id/edUsuario"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -22,12 +22,13 @@
         android:textColor="@color/black" />
 
     <EditText
-        android:id="@+id/edPassword"
+        android:id="@+id/edSenha"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:hint="Senha"
+        android:inputType="textPassword"
         android:textColor="@color/black" />
 
     <LinearLayout
