--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -11,6 +11,11 @@
     android:layout_marginRight="18dp"
     tools:context=".activities.CadastroActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
