--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:backgroundTint="@color/green"
             android:textColor="@color/black"
             android:layout_marginRight="15dp"
-            />
+            android:onClick="btEntrarOnClick"/>
 
         <Button
             android:id="@+id/btCadastrar"
@@ -60,7 +60,7 @@
             android:backgroundTint="@color/white"
             android:text="Cadastre-se"
             android:textColor="@color/black"
-            />
+            android:onClick="btCadastrarOnClick"/>
     </LinearLayout>
 
 </LinearLayout>
