--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:text="Entrar"
             tools:ignore="MissingConstraints"
             android:backgroundTint="@color/green"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:layout_marginRight="15dp"
             android:onClick="btEntrarOnClick"/>
 
