--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.HomeActivity">
 
-        <Button
-            android:id="@+id/btEntrar"
-            style="@style/BoldHeadlines"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="false"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="false"
-            android:backgroundTint="@color/green"
-            android:layout_marginBottom="10dp"
-            android:text="+Criar Anuncio"
-            android:textColor="@color/black"
-            android:textSize="15dp" />
+    <Button
+        android:id="@+id/btCriarAnuncio"
+        style="@style/BoldHeadlines"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="false"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="false"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/green"
+        android:text="+Criar Anuncio"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:onClick="btCriarAnuncioOnClick"/>
 
 
     <LinearLayout
@@ -47,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="250dp"
-                android:text="Você não possui açudes cadastrados! \n Cadastre um açude!"
+                android:text="Você não possui anúncios cadastrados! \n Cadastre um anúncio!"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold"
