--- a/app/src/main/res/layout/input_tiposervico.xml
+++ b/app/src/main/res/layout/input_tiposervico.xml
@@ -13,8 +13,8 @@
         android:textSize="20dp"
         android:textStyle="bold" />
 
+    <!-- style dando pau style="@style/spinner_style"-->
     <Spinner
-        style="@style/spinner_style"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginBottom="10dp"
