--- a/app/src/main/res/layout/input_tiposervico.xml
+++ b/app/src/main/res/layout/input_tiposervico.xml
@@ -13,8 +13,7 @@
         android:textSize="20dp"
         android:textStyle="bold" />
 
-    <!-- style dando pau style="@style/spinner_style"-->
-    <Spinner
+    <com.skydoves.powerspinner.PowerSpinnerView
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginBottom="10dp"
