--- a/app/src/main/res/layout/input_valorhora.xml
+++ b/app/src/main/res/layout/input_valorhora.xml
@@ -35,7 +35,9 @@
             android:hint="Digite um valor..."
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            android:id="@+id/edValorHora"
+            android:inputType="number"/>
 
     </LinearLayout>
 
