--- a/app/src/main/res/layout/anunciodetalhe_fragment_dialog.xml
+++ b/app/src/main/res/layout/anunciodetalhe_fragment_dialog.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/green"
-    android:paddingHorizontal="10dp"
-    android:paddingTop="10dp">
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/green"
+        android:paddingTop="3dp"
+        android:paddingHorizontal="5dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -187,7 +189,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:textSize="16dp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:id="@+id/tvProprietario"/>
 
         </LinearLayout>
 
@@ -245,4 +248,4 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
