--- a/app/src/main/res/layout/input_descricao.xml
+++ b/app/src/main/res/layout/input_descricao.xml
@@ -15,8 +15,10 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
         android:textSize="19dp"
-        android:backgroundTint="@color/white"/>
+        android:backgroundTint="@color/white"
+        android:id="@+id/edDescricao"
+        android:textColor="@color/white"/>
 
 </LinearLayout>
