--- a/app/src/main/res/layout/input_tiposervico.xml
+++ b/app/src/main/res/layout/input_tiposervico.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginBottom="10dp">
 
@@ -13,10 +15,14 @@
         android:textSize="20dp"
         android:textStyle="bold" />
 
-    <com.skydoves.powerspinner.PowerSpinnerView
+    <Spinner
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="35dp"
         android:layout_marginBottom="10dp"
-        android:id="@+id/spTipoServico"/>
+        android:id="@+id/spTipoServico"
+        android:hint="Selecione..."
+        android:textColorHint="@color/white"
+        android:textSize="26dp"
+        app:spinner_popup_animation="bounce"/>
 
 </LinearLayout>
