--- a/app/src/main/res/layout/anunciocad_fragment_dialog.xml
+++ b/app/src/main/res/layout/anunciocad_fragment_dialog.xml
@@ -38,7 +38,8 @@
                         android:text="Funcionário"
                         android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:buttonTint="@color/white" />
 
                     <RadioButton
                         android:id="@+id/rbProprietario"
@@ -48,7 +49,8 @@
                         android:text="Proprietario"
                         android:textColor="@color/white"
                         android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:buttonTint="@color/white"/>
 
                 </RadioGroup>
 
