--- a/app/src/main/res/layout/filtros_fragment_dialog.xml
+++ b/app/src/main/res/layout/filtros_fragment_dialog.xml
@@ -1,58 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:background="@color/green"
-        android:orientation="vertical"
-        android:padding="10dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="Selecione os filtros:"
-            android:textColor="@color/white"
-            android:textSize="28dp"
-            android:textStyle="bold" />
-
-        <include android:id="@+id/layoutTipoServico"
-            layout="@layout/input_tiposervico"/>
-
-        <include
-            android:id="@+id/layoutValorHora"
-            layout="@layout/input_valorhora"/>
-
-        <include android:id="@+id/layoutPeriodo"
-            layout="@layout/input_periodo"/>
-
-        <include android:id="@+id/layoutEndereco"
-            layout="@layout/input_endereco"/>
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
+        android:layout_gravity="center_horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="@color/green"
+            android:orientation="vertical"
+            android:padding="10dp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp">
 
-            <Button
-                android:layout_width="180dp"
-                android:layout_height="60dp"
-                android:id="@+id/btAplicar"
-                android:text="Aplicar"
-                android:textColor="@color/green"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:backgroundTint="@color/white"
-                android:layout_gravity="center"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:text="Selecione os filtros:"
+                android:textColor="@color/white"
+                android:textSize="28dp"
+                android:textStyle="bold" />
+
+            <include android:id="@+id/layoutTipoServico"
+                layout="@layout/input_tiposervico"/>
+
+            <include
+                android:id="@+id/layoutValorHora"
+                layout="@layout/input_valorhora"/>
+
+            <include android:id="@+id/layoutPeriodo"
+                layout="@layout/input_periodo"/>
+
+            <include android:id="@+id/layoutEndereco"
+                layout="@layout/input_endereco"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:layout_width="180dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/btAplicar"
+                    android:text="Aplicar"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:backgroundTint="@color/white"
+                    android:layout_gravity="center"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
