--- a/app/src/main/res/layout/layout_seusanuncios_menu.xml
+++ b/app/src/main/res/layout/layout_seusanuncios_menu.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,10 +13,10 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_person"
-            android:id="@+id/btMenuPerfil"
+            android:background="@drawable/ic_home"
+            android:id="@+id/btHome"
             android:layout_margin="10dp"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -38,12 +37,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Home"
+                android:text="Seus Anúncios"
                 android:textSize="13dp"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:gravity="center"
-                android:textStyle="italic"/>
+                android:textStyle="italic" />
 
         </LinearLayout>
 
