--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,26 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/opcion1"
-        android:title="Opcion 1" />
-
-    <item
-        android:id="@+id/opcion2"
-        android:title="Opcion 2" />
-    <item
-        android:id="@+id/pessoa"
-        android:title="Pessoa"
-        android:icon="@drawable/ic_person"
-        app:showAsAction="always"
-        />
-
-    <item
-        android:id="@+id/buscar"
-        android:title="Buscar"
-        android:icon="@drawable/ic_baseline_search_24"
-        app:showAsAction="always" />
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/iPerfil"
+        android:title="Perfil"/>
 </menu>
-
