Ajustes para implementação dos filtros

--- a/app/src/main/res/layout/anunciodetalhe_fragment_dialog.xml
+++ b/app/src/main/res/layout/anunciodetalhe_fragment_dialog.xml
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
+            android:textStyle="italic"
             android:textSize="16dp"
             android:textColor="@color/white"
             android:id="@+id/tvDescricao"
@@ -57,7 +57,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:layout_marginRight="5dp">
+                android:layout_marginRight="2dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -68,7 +68,7 @@
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvDataInicial"
                     android:textSize="16dp"
@@ -92,7 +92,7 @@
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvDataFinal"
                     android:textSize="16dp"
