--- a/app/src/main/res/layout/filtros_fragment_dialog.xml
+++ b/app/src/main/res/layout/filtros_fragment_dialog.xml
@@ -27,12 +27,103 @@
                 android:textSize="28dp"
                 android:textStyle="bold" />
 
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:layout_width="0dp"
+                    android:layout_weight="1.5"
+                    android:layout_height="wrap_content"
+                    android:text="Funcionário"
+                    android:textColor="@color/white"
+                    android:buttonTint="@color/white"
+                    android:textSize="16dp"
+                    android:id="@+id/rbFuncionario"/>
+
+                <RadioButton
+                    android:layout_width="0dp"
+                    android:layout_weight="1.5"
+                    android:layout_height="wrap_content"
+                    android:text="Proprietario"
+                    android:textColor="@color/white"
+                    android:buttonTint="@color/white"
+                    android:textSize="16dp"
+                    android:id="@+id/rbProprietario"/>
+
+                <RadioButton
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Todos"
+                    android:textColor="@color/white"
+                    android:buttonTint="@color/white"
+                    android:textSize="16dp"
+                    android:id="@+id/rbTodos"/>
+
+            </RadioGroup>
+
             <include android:id="@+id/layoutTipoServico"
                 layout="@layout/input_tiposervico"/>
 
-            <include
-                android:id="@+id/layoutValorHora"
-                layout="@layout/input_valorhora"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Valor/Hr"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="19dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="Min."
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:textSize="15dp"/>
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_weight="2"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:backgroundTint="@color/white"
+                        android:textSize="16dp"
+                        android:id="@+id/edValorHrMin"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:text="Máx."
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:textSize="15dp"/>
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_weight="2"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:backgroundTint="@color/white"
+                        android:textSize="16dp"
+                        android:id="@+id/edValorHrMax"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <include android:id="@+id/layoutPeriodo"
                 layout="@layout/input_periodo"/>
