--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -50,7 +50,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_baseline_search_24"
+            android:background="@drawable/ic_filtro"
             android:id="@+id/btMenuPesquisa"
             android:layout_margin="10dp"
             android:layout_gravity="center"/>
