--- a/app/src/main/res/layout/layout_perfil_menu.xml
+++ b/app/src/main/res/layout/layout_perfil_menu.xml
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
+                android:text="Perfil"
                 android:textSize="24dp"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
@@ -37,7 +37,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Perfil"
+                android:text="Seu Perfil"
                 android:textSize="13dp"
                 android:layout_gravity="center"
                 android:textColor="@color/white"
