--- a/app/src/main/res/layout/tiposervico_list_item.xml
+++ b/app/src/main/res/layout/tiposervico_list_item.xml
@@ -8,17 +8,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="2dp">
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvTipoServico"
             android:gravity="center"
-            android:textColor="@color/green"
+            android:textColor="@color/white"
             android:textStyle="italic"
-            android:textSize="17dp"/>
+            android:textSize="17dp"
+            android:background="@color/green"/>
 
     </LinearLayout>
 
