InputType cadastro e TipoPessoa no CardView

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -106,6 +106,7 @@
                 android:hint="Digite aqui..."
                 android:imeActionLabel="usuario"
                 android:textColorHint="@color/black"
+                android:inputType="number"
                 app:mask="___.___.___-__"
                 app:maskCharacter=""
                 app:maskStyle="persistent"/>
