--- a/app/src/main/res/layout/anuncios_list_item.xml
+++ b/app/src/main/res/layout/anuncios_list_item.xml
@@ -28,15 +28,32 @@
                android:layout_height="wrap_content"
                android:orientation="horizontal">
 
-               <TextView
-                   android:id="@+id/tvTipoServico"
-                   android:layout_width="wrap_content"
-                   android:layout_height="32dp"
-                   android:layout_weight="2"
-                   android:text="Tipo Serviço"
-                   android:textColor="@color/green"
-                   android:textSize="26dp"
-                   android:textStyle="bold"/>
+               <LinearLayout
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:orientation="horizontal"
+                   android:layout_weight="2">
+
+                   <TextView
+                       android:id="@+id/tvTipoServico"
+                       android:layout_width="wrap_content"
+                       android:layout_height="32dp"
+                       android:text="Tipo Serviço"
+                       android:textColor="@color/green"
+                       android:textSize="26dp"
+                       android:textStyle="bold"
+                       android:layout_marginRight="5dp"/>
+
+                   <TextView
+                       android:id="@+id/tvTipoPessoa"
+                       android:layout_width="wrap_content"
+                       android:layout_height="32dp"
+                       android:text="tipopessoa"
+                       android:textColor="@color/black"
+                       android:textSize="20dp"
+                       android:textStyle="italic"/>
+
+               </LinearLayout>
 
                <LinearLayout
                    android:layout_width="100dp"
