--- a/app/src/main/res/layout/anuncios_list_item.xml
+++ b/app/src/main/res/layout/anuncios_list_item.xml
@@ -236,7 +236,7 @@
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
-                   android:text="| PROPRIETÁRIO: "
+                   android:text="| Contratante: "
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="18dp"/>
@@ -246,7 +246,7 @@
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
-                   android:text="Nome do proprietario"
+                   android:text="Nome do Contratante"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:id="@+id/tvProprietario"/>
