--- a/app/src/main/res/layout/input_descricao.xml
+++ b/app/src/main/res/layout/input_descricao.xml
@@ -8,10 +8,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLength="250"
         android:text="Descrição:"
-        android:textStyle="bold"
+        android:textColor="@color/white"
         android:textSize="20dp"
-        android:textColor="@color/white"/>
+        android:textStyle="bold" />
 
     <EditText
         android:layout_width="match_parent"
